<resources>
    <string name="app_name">闲时光</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="view_error"><![CDATA[没有加载到数据%>_<%]]></string>
    <string name="view_empty"><![CDATA[没有加载到数据~~~~(>_<)~~~~]]></string>

    <!--bottom sheet list-->
    <string name="action_add_to_bookmarks">添加到收藏</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="action_copy_link">分享到朋友圈</string>
    <string name="action_open_in_browser">分享给微信好友</string>
    <string name="action_copy_text">复制内容文本</string>
    <string name="action_share_as_text">作为文本分享</string>
    <string name="read_mode">阅读模式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="read_note">浏览记录</string>
    <string name="tv_about">关于</string>
    <string name="movie_content">电影简介</string>
    <string name="movie_comment">热门评论</string>
    <string name="round_cinemal">周边影院</string>

    <string name="author">作者</string>
    <string name="author_name">Kusan</string>
    <string name="author_description">福建,福州</string>
    <string name="follow_me_on_github">在GitHub关注我</string>
    <string name="follow_me_on_zhihu">在知乎关注我</string>
    <string name="support">支持</string>
    <string name="feedback_description">帮助我改进闲时光App</string>
    <string name="coffee">请我喝杯咖啡</string>
    <string name="coffee_description">如果你认同我的工作，可以请我喝杯咖啡表示支持</string>
    <string name="github_url">https://github.com/marktony</string>
    <string name="zhihu_url">https://www.zhihu.com/people/kirin-momo</string>
    <string name="rate_description">如果你喜欢闲时光App,请在商店中给它一个好评吧</string>
    <string name="zhihu_account">\@cwzqf</string>
    <string name="open_source_license">开源许可</string>
    <string name="version">版本:V1.0.0</string>
<string name="rate">为纸飞机应用评分</string>
<string name="feedback">反馈Bug / 建议</string>
<string name="device_model">设备型号:</string>
<string name="sdk_version">SDK版本:</string>
<string name="no_mail_app">没有找到邮件类App</string>
<string name="no_app_store_found">没有市场类App</string>
<string name="no_browser_found">没有安装浏览器</string>
<string name="donate_account">kldd529@gmail.com</string>
<string name="sendto">mailto:kldd529@gmail.com</string>
<string name="mail_topic">纸飞机使用反馈与建议</string>
<string name="about">关于</string>
    <string name="loaded_failed">加载失败!</string>
    <string name="retry">重试</string>
    </resources>
