<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="18dp"
    android:paddingBottom="18dp"
    android:gravity="center"
    style="?attr/bottomSheetStyle"
    android:layout_marginTop="130dp"
    android:id="@+id/reading_bottom_sheet"
    android:layout_weight="3"
    android:background="@color/viewBackground">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/layout_bookmark">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_collect"
            android:id="@+id/imageView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/action_add_to_bookmarks"
            android:gravity="center"
            android:id="@+id/textView"
            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/layout_bookmark"
        android:id="@+id/layout_copy_link">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_wx_group"
           />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/action_copy_link"

            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/layout_copy_link"
        android:id="@+id/layout_open_in_browser">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_wx_logo"
           />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"

            android:text="@string/action_open_in_browser"

            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>



</LinearLayout>